Added main structure

--- a/sections/1-presentation.tex
+++ b/sections/1-presentation.tex
@@ -1,8 +1,5 @@
-% Chapter Template
-
-\chapter{Cadre du Stage et Présentation de l'organisme d'acceuil} % Main chapter title
-
-\label{Chapter1} % Change X to a consecutive number; for referencing this chapter elsewhere, use \ref{ChapterX}
+\chapter{Contexte et Cadre du Stage}
+\label{context}
 
 \section{Cadre du stage}
 
@@ -11,7 +8,14 @@ Ce stage s'inscrit dans le cadre de l'UE Stage Informatique du Semestre 5 de a L
 \subsection{Organisme d'acceuil et Encadrant}
 
 Ce stage s'est déroulé au sein de \href{https://www.labri.fr/}{LaBRI} (Laboratoire Bordelais de Recherche de Informatique) situé sur le Campus Peixotto de l'Université.
-Il a été encadré par \href{https://www.labri.fr/perso/falleri/}{Mr FALLERI Jean-Rémy}, Enseignant-Chercheur à Bordeaux INP (ENSEIRB-MATMECA) et au LaBRI.
+L'établissement acceuil de nombreux enseignants-chercheurs exerçant à l'Université et à l'ENSEIRB-MATMECA de Bordeaux INP,
+mais aussi des chercheurs CNRS ainsi qu'un centaine de doctorants.
+
+Le bâtiment principal est situé sur le campus Peixotto, il s'agit du bâtiment A30, juste derrière le CREMI.
+Malheureusement, pendant cette période de stage il n'y avait pas de bureau disponible directement au LaBRI,
+j'ai donc dû travailler au CREMI.
+
+Le stage a été encadré par \href{https://www.labri.fr/perso/falleri/}{Mr FALLERI Jean-Rémy}, Enseignant-Chercheur à Bordeaux INP (ENSEIRB-MATMECA) et au LaBRI.
 
 \subsection{Sujet}
 
