--- a/rapport.tex
+++ b/rapport.tex
@@ -271,14 +271,10 @@ headsepline, % Uncomment to get a line under the header
 
 \pagestyle{thesis} % Return the page headers back to the "thesis" style
 
-% Include the chapters of the thesis as separate files from the Chapters folder
-% Uncomment the lines as you write the chapters
-
 \include{sections/1-presentation}
-% \include{sections/Chapter1}
-%\include{Chapters/Chapter3}
-%\include{Chapters/Chapter4}
-%\include{Chapters/Chapter5}
+\include{sections/2-deroulement}
+\include{sections/3-internationalisation}
+\include{sections/4-bilan}
 
 %----------------------------------------------------------------------------------------
 %	THESIS CONTENT - APPENDICES
