--- a/sections/1-presentation.tex
+++ b/sections/1-presentation.tex
@@ -15,7 +15,7 @@ Le bâtiment principal est situé sur le campus Peixotto, il s'agit du bâtiment
 Malheureusement, pendant cette période de stage il n'y avait pas de bureau disponible directement au LaBRI,
 j'ai donc dû travailler au CREMI.
 
-Le stage a été encadré par \href{https://www.labri.fr/perso/falleri/}{Mr FALLERI Jean-Rémy}, Enseignant-Chercheur à Bordeaux INP (ENSEIRB-MATMECA) et au LaBRI.
+Le stage a été encadré par \href{https://www.labri.fr/perso/falleri/}{Mr FALLERI Jean-Rémy}, Enseignant-Chercheur à Bordeaux INP (ENSEIRB-MATMECA) et au LaBRI, et Mr ROBBES Romain, directeur de recherches CNRS.
 
 \subsection{Sujet}
 
