--- a/rapport.tex
+++ b/rapport.tex
@@ -41,10 +41,9 @@ chapterinoneline, % Uncomment to place the chapter title next to the number on o
 
 \usepackage[utf8]{inputenc} % Required for inputting international characters
 \usepackage[T1]{fontenc} % Output font encoding for international characters
-
 \usepackage{mathpazo} % Use the Palatino font by default
-
 \usepackage[backend=bibtex,natbib=true]{biblatex} % Use the bibtex backend with the authoryear citation style (which resembles APA)
+\usepackage{listings}
 
 \addbibresource{rapport.bib} % The filename of the bibliography
 
