--- a/rapport.bib
+++ b/rapport.bib
@@ -125,3 +125,52 @@
     location = {San Diego, CA, USA},
     series = {MAPS 2022},
 }
+
+@inproceedings{cool-plot,
+    author = {Minelli, Roberto and Mocci, Andrea and Lanza, Michele and Baracchi
+              , Lorenzo},
+    booktitle = {2014 Second IEEE Working Conference on Software Visualization},
+    title = {Visualizing Developer Interactions},
+    year = {2014},
+    volume = {},
+    number = {},
+    pages = {147-156},
+    keywords = {Data
+                visualization;Visualization;Containers;Inspection;Tracking;Navigation;Debugging;IDE;interaction;comprehension;visual
+                storytelling},
+    doi = {10.1109/VISSOFT.2014.31},
+}
+
+@inproceedings{these-casseau,
+    author = {Casseau, Christophe and Falleri, Jean-Rémy and Degueule, Thomas
+              and Blanc, Xavier},
+    booktitle = {2023 IEEE Symposium on Visual Languages and Human-Centric
+                 Computing (VL/HCC)},
+    title = {MOON: Assisting Students in Completing Educational Notebook
+             Scenarios},
+    year = {2023},
+    volume = {},
+    number = {},
+    pages = {157-167},
+    keywords = {Visualization;Codes;Pain;Moon;Writing;Media;Real-time
+                systems;educational notebooks;notebook scenarios;Jupyter
+                notebooks},
+    doi = {10.1109/VL-HCC57772.2023.00026},
+}
+
+@inproceedings{these-latappy,
+    author = {Latappy, Corentin and Perez, Quentin and Degueule, Thomas and
+              Falleri, Jean-Rémy and Urtado, Christelle and Vauttier, Sylvain and
+              Blanc, Xavier and Teyton, Cédric},
+    booktitle = {2023 IEEE International Conference on Software Analysis,
+                 Evolution and Reengineering (SANER)},
+    title = {MLinter: Learning Coding Practices from Examples—Dream or Reality?},
+    year = {2023},
+    volume = {},
+    number = {},
+    pages = {795-804},
+    keywords = {Training;Transfer learning;Companies;Static analysis;Software
+                quality;Encoding;Task analysis;software quality;coding
+                practices;machine learning;CodeBERT},
+    doi = {10.1109/SANER56733.2023.00092},
+}
