--- a/sections/3-internationalisation.tex
+++ b/sections/3-internationalisation.tex
@@ -1,4 +1,32 @@
-\chapter{Git et Github (Internationalisation)}
+\chapter{Git and Github (Internationalisation)}
 \label{international}
 
-TODO
+During my internship i needed to use a lot of tools which had an international dimention to them, but I wanted to showcase one (or a combination of two) that fits particularly well for this subject:
+Git and Software Forge (like Github).
+
+
+\section{What is Git ?}
+
+When building software we are often faced with a considerable amount of files containing source code, configuration, build instructiong, etc.
+Keeping track of all of these and the different changes that are made to theme is crutial, and this is why tools like Git exists.
+
+Git is a Version Control System (VCS), it allow developpers to submit individual changes to a codebase (commits), which are tracked in a sort of timeline: the tree.
+The real power of git is that it allow people to work \emph{together and at the same time} whith complex mechanisms such as branching.
+It was first introduced by Linus Torvalds to manage his gigantic Linux project, which at the time became impossible to manage by just applying changes manually.
+
+The international dimention of git is the fact that it's not a traditionnal client/server relationship, since when you want to work on a project, you just clone it in it's entierty.
+This allow people to copy, or as it's said \emph{fork} a project, and start working on their own part.
+(Of course, git can be used in private contexts like enterprises, this example it showing it's used in open source software, where it's the most common VCS and where Internationalisation plays an important role).
+
+At it's core, it is possible to use git by itself on a server and manage developpement via e-mails, but this is quite rough, and that's where software forges comes into play.
+
+
+\section{What are Software Forges}
+
+Software are platform, often web applications, that hosts a repository with a VCS, and extra tools to help with developpement.
+For example, GitHub is a software forge, and it's the most popular, it's used by a lot of open-source projects, but also by a lot of private companies for hosting their source code.
+Some notable feature of those platforms include the ability to open tickets for bug or features (called issue), or manage (write) access to the underlying source code.
+These tools centralizes the developpement effort and allow collaborators to have a place to organize their work.
+
+Software Forges enhances the international reach of git (or other VCS), at least in open-source software, because it make the access to source code way easier,
+and so can attract developpers from anywhere in the world.
